--- a/404.html
+++ b/404.html
@@ -1,1 +1,50 @@
-
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--responsive design-->
+	<meta name="keywords" content="tech, tips, windows, help, advice, support, debloat">
+	<meta name="robots" content="noindex,nofollow">
+	<link rel="stylesheet" href="stylesheet.css"> <!--stylesheet-->
+	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
+	<script src="scripts.js"></script> <!--JavaScript file-->
+	<title>404 | Hackboto Tech Tips</title> <!--title-->
+</head>
+<body>
+	<div class="sticky">
+		<header> <!--Header-->
+			<p>Hackboto Tech Tips</p> 
+		</header>
+		<nav class="nav" id="Nav" title="Main Navigation"> <!--Nav-->
+			<div class="columnnav">
+				<a href="index.html" title="Go to Home">Home</a>
+				<a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
+				<a href="mobile_tips.html" title="Explore tips and tricks for you mobile">Mobile Guides</a>
+				<a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
+				<a href="contact.html" title="Visit Contact page">Contact</a>
+			</div>
+			<div class="columnclose">
+				<div class="nav"><button href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</button></div>
+			</div>
+		</nav>
+	</div>
+	<br>
+    <section title="Main Content">
+		<div class="welcometext">
+			<h1>Error 404</h1>
+			<p>HTTP 404 has been invoked; this is because you have attempted to view a webpage or access a file that does not exist on the Hackboto Tech Tips website.</p>
+			<p>Possible reasons for this error occurring include the webpage/ file moving to a new location, attempting to visit a webpage that no longer exists, or you have mistyped the URL for the webpage you were attempting to access.</p>
+	</section>
+	<hr>
+	<footer title="Website Footer"> <!--Footer-->
+		<div class="footertext">
+			<p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!--Copyright-->
+		</div>
+		<div class="footerbuttons">
+			<a href="map.html" title="Go to Sitemap">Sitemap</a>
+			<a href="legal.html" title="Go to Legal">Legal</a>
+		</div>
+	</footer>
+</body>
+</html>
